Add errors when creating and executing application

--- a/basic-application/basic.html
+++ b/basic-application/basic.html
@@ -12,7 +12,7 @@
 <body>
     <section class="game">
         <section class="game__header">
-            <button class="game__start">
+            <button class="game__button">
                 <i class="fas fa-play"></i>
             </button>
             <span class="game__timer" >0:0</span>
