Add exit button to come back to the initial screen

--- a/basic-application/basic.html
+++ b/basic-application/basic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main_addsound.js" defer></script>
+    <script src="main_addexitBtn.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3c9e40c231.js" crossorigin="anonymous"></script>
     <title>Carrot-game</title>
@@ -21,10 +21,10 @@
         <section class="game__field"></section>
     </section>
     <section class="pop-up pop-up--hide">
-        <button class="pop-up__refresh">
-            <i class="fas fa-redo"></i>
-        </button>
-        <span class="pop-up__message">hello</span>
+            <button class="pop-up__refresh">
+                <i class="fas fa-redo"></i>
+            </button>
+            <span class="pop-up__message">hello</span>
     </section>
 </body>
 </html>
