Fix explanation and outputs regarding brainstorming

--- a/brainstorming/start-stop/index.html
+++ b/brainstorming/start-stop/index.html
@@ -9,14 +9,13 @@
     <title>Start-stop</title>
 </head>
 <body>
-    <div class="item__row">
+    < class="item__row">
         <div class="line horizontal"></div>
         <div class="line vertical"></div>
         <img src="./img/target.png" alt="target" class="target">
         <span class="tag"></span>
         <button id="started">started</button>
         <button id="stopped">stopped</button>
-        </div>
     </div>
 </body>
 </html>
