--- a/basic-application/basic.html
+++ b/basic-application/basic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="main_addexitBtn2.js" defer></script>
+    <script src="test.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/3c9e40c231.js" crossorigin="anonymous"></script>
     <title>Carrot-game</title>
